--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <meta name="description" content="Song Deng, 邓松.">
 <meta name="keywords" content="Song Deng, 邓松, Big Data, Data Mining, Deep Learning, ">
-<link rel="stylesheet" href="./jemdoc.css" type="text/css" />
+<link rel="stylesheet" href="./css/jemdoc.css" type="text/css" />
 <script src="jquery.min.js"></script>
 <link rel="shortcut icon" href="./Files/favicon.ico">
 <title>Song Deng's Homepage 邓松主页</title> 
@@ -299,17 +299,19 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 
 
 <A NAME="Projects"><h2>Projects</h2></A>
-<font size="3"> 
+<font size="3.5"> 
 <ul>
-<li>国家自然科学基金面上项目，51977113，网络攻击下能源互联网数据容侵评估及可靠存储机制研究，2020.1-2023.12，在研，主持</li>
-<li>国家自然科学基金重大项目，新型电力系统信息物理安全风险传播与演化机理，2023.1-2027.12，在研，子课题负责人	</li>
-<li>江苏省电力公司南通供电分公司委托项目，XXN51201404252，基于机器学习的配电网智能负荷预测技术及应用研究技术，2019.12-2020.12，结题，主持	</li>
-<li>全球能源互联网研究院委托项目，SGTYHT/19-JS-217，SQL指令机器学习安全分析技术研究，2020.10-2021.3，结题，主持</li>
-<li>国网上海市电力公司科技项目，SGSHSJ00ZSJS2103630，基于图计算的配电网拓扑数据校核方法与存储技术研究，2021.11-2022.11，结题，主持	</li>
-<li>南京南瑞信息通信科技有限公司科技项目，4501476024，5G安全分析与电信应用场景设计开发-安全防护体系研究，2021.10-2022.12，在研，主持</li>
-<li>全球能源互联网研究院委托项目，SGGR0000WLJS2101644，配电网智能运检示范区顶层设计及数据模型构建技术研究，2021.12-2022.12， 结题 ，主持</li>
-<li> 全球能源互联网研究院委托项目，SGGR0000ZHJS2200278，SQL识别的算法模型协助研究，2022.4-2022.12，  结题  ，主持</li>
-<li>国网上海市电力公司科技项目，SGSHSJ00ZSJS2203899，基于多源数据融合的配电网规划方法研究与应用，2022.11-2023.11，在研，主持 </li>
+<li> 2020.1-2023.12, Research on Data Intrusion Tolerance Evaluation and Reliable Storage Mechanism of Energy Internet under Cyber Attack, NSFC (No. 51977113), PI</li>
+<li>2016.1-2018.12, Data transmission optimization and intelligent filtering mechanism for active distribution network, NSFC (No. 51507084), PI	</li>
+<li> 2016.5-2017.12, Safe and efficient data transmission and filtering mechanism in active distribution network environment, China Postdoctoral Science Foundation (No. 2016M591890), PI</li>
+<li> 2016.9-2017.2, Research on Intelligent Planning Technology of Concurrent Computing Task Flow, Science and Technology Project of State Grid Corporation of China (No. SGRIJS2016602), PI</li>
+<li>2015.8-2016.1, Research on Parallel Processing Technology and Model Design in Big Data Environment, Project of State Grid Corporation of China (No. SGRIJS2015693), PI</li>
+<li> 2016.11-2017.4, Power cloud top-level design and standard system construction, Project of Global Energy Internet Research Institute (No. SGTYHT/15-JS-93), PI</li>
+<li> 2016.10-2018.10, Cloud computing-based Internet-based intelligent service platform for electric power companies, Project of Nanjing Branch of China Electric Power Research Institute (No. NY71-16-041), PI</li>
+<li> 2019.12-2020.12, Intelligent Load Forecasting Technology and Application Research Technology of Distribution Network Based on Machine Learning, Nantong Power Supply Branch Project of Jiangsu Electric Power Company (No.XXN51201404252), PI </li>
+<li> 2020.10-2021.3, Research on Security Analysis Technology of SQL Instruction Machine Learning, Project of Global Energy Internet Research Institute (No. SGTYHT/19-JS-217), PI </li>
+<li> 2020.10-2022.1, R&D and application demonstration of energy big data support platform, Pilot Demonstration Project for the Development of Big Data Industry of the Ministry of Industry and Information Technology (No. [2020]47), PI </li>
+<li>2017.12-2019.12, Terminal security access platform and data security transmission system oriented to power production, The Third Batch of Leading Talent Pro</li>
 </li>
 </ul>
 </font>
@@ -318,16 +320,13 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 <A NAME="Patents for inventions"><h2>Patents for inventions</h2></A>
 <font size="4"> 
 <ul>
-<li><b>邓松</b>,岳东,赵善驰,高广谓,解相朋,黄崇鑫.一种基于内容过滤和多Agent的有源配电网大数据安全高效传输方法(ZL201510346594.6)</li>
-<li><b>邓松</b>,张利平,岳东,付雄,葛辉,黄崇鑫.一种基于大数据技术的配电网故障诊断方法与系统 (ZL201710159906.1)</li>
-<li><b>邓松</b>,吴新新,岳东,张利平,付雄,朱博宇,徐雨楠.一种有源配电网下不良数据的有效识别方法 (ZL201810010271.3)</li>
-<li><b>邓松</b>,徐雨楠,岳东,朱博宇,王堃,张利平,吴新新.一种基于博弈论的有源配电网数据安全高效传输优化方法(ZL201810014390.6 )</li>
-<li><b>邓松</b>, 张利平,岳东,付雄,葛辉,黄崇鑫.一种面向配网大数据的多时态维度数据融合方法(ZL201710144803.8)</li>
-<li><b>邓松</b>,朱博宇,岳东,徐雨楠,王堃,张利平,吴新新.一种基于传染病模型的信息安全风险传播控制方法及装置(ZL201810035084.0)</li>
-<li><b>邓松</b>,朱博宇,岳东,付雄, 葛辉, 徐雨楠, 吴新新.基于攻击图网络的脆弱点检测系统、方法及存储介质(ZL201910383135.3)</li>
-<li><b>邓松</b>,袁新雅,岳东,付雄,葛辉,朱博宇.一种针对伪装入侵信息的检测的方法(ZL201910514852.5)</li>
-<li><b>邓松</b>,张建堂,祝展望,岳东,袁新雅,陈福林,董霞,蔡清媛.一种基于GEP优化的智能电网数据异常有效识别方法(ZL202010112678.4)</li>
-<li><b>邓松</b>,翟羽佳,张建堂,祝展望,胡琦聪,岳东,袁欣雅,陈福林. 一种计及攻击的能源互联网数据可靠存储系统(ZL202011344926.4)</li>
+<li><b>Deng Song</b>,Yue Dong, Zhao Shan-chi, Gao Guang-wei, Jie Xiang-peng, Huang Chong-xin. A safe and efficient transmission method of active distribution network big data based on content filtering and multi-agent (ZL201510346594.6)</li>
+<li><b>Deng Song</b>,Zhang Li-pin, Yue Dong, Fu Xiong ,Ge Hui, Huang Chong-xin. A Method and System for Fault Diagnosis of Distribution Network Based on Big Data Technology (ZL201710159906.1)</li>
+<li><b>Deng Song</b>, Wu Xin-xin, Yue Dong, Zhang Li-pin, Fu Xiong, Zhu Bo-yu, Xu Yu-nan. An effective method for identifying bad data in active distribution network (ZL201810010271.3)</li>
+<li><b>Deng Song</b>,  Xu Yu-nan, Yue Dong, Zhu Bo-yu, Wang Kun, Zhang Li-pin, Wu Xin-xin. An optimization method for safe and efficient data transmission in active distribution network based on game theory (ZL201810014390.6 )</li>
+<li><b>Deng Song</b>,Zhang Li-pin, Yue Dong, Fu Xiong, Ge Hui, Huang Chong-xin. A multi-temporal dimensional data fusion method for distribution network big data (ZL201710144803.8)</li>
+<li><b>Deng Song</b>,Zhu Bo-yu, Yue Dong, Xu Yu-nan, Wang Kun, Zhang Li-pin, Wu Xin-xin. Information security risk propagation control method and device based on infectious disease model (ZL201810035084.0)</li>
+<li><b>Deng Song</b>, Zhu Bo-yu, Yue Dong, Fu Xiong, Ge Hui, Xu Yu-nan, Wu Xin-xin. Vulnerable point detection system, method and storage medium based on attack graph network (ZL201910383135.3)</li>
 </li>
 </ul>
 </font>
@@ -346,8 +345,8 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 <p><b>Membership</b>: </p>
 <font size="3"> 
 <ul>
-<li>Program Committee Member for Frontiers in Computational Neuroscience</li>
-<li>Program Committee Member for Power Information and Communication Technology</li>
+<li>Guest Editor for Frontiers in Computational Neuroscience</li>
+<li>Associate Editor for Power Information and Communication Technology</li>
 </ul>
 </font>
 <br />
@@ -382,9 +381,9 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 <ul>
 
  
-<li>邓松(2/5)，江苏省电工技术科学技术二等奖，面向配网大数据的智能分析处理及安全防护关键技术与应用，2021年9月.</font></li>
-<li>邓松(2/5)，国网江苏省电力公司科技进步三等奖，面向配网大数据的智能分析处理及安全防护关键技术与应用，2021年9月.</font></li>
-<li>邓松(2/5), 八桂人工智能科学技术奖(自然科学)三等奖, 面向复杂环境的基因表达式编程理论与算法研究，2021年6月.</font></li>
+<li>Deng Song (2/5), Second Prize of Jiangsu Electric Technology Science and Technology, Key Technology and Application of Intelligent Analysis and Processing and Security Protection for Distribution Network Big Data, September 2021 .</font></li>
+<li>Deng Song (2/5), Third Prize of Science and Technology Progress of State Grid Jiangsu Electric Power Company, Key Technology and Application of Intelligent Analysis and Processing and Security Protection for Distribution Network Big Data, September 2021 .</font></li>
+<li>Deng Song (2/5), Third Prize of Bagui Artificial Intelligence Science and Technology Award (Natural Science), Research on Theory and Algorithm of Gene Expression Programming for Complex Environments, June 2021.</font></li>
 
 
 
@@ -427,11 +426,6 @@ $(function(){
 
 });
 </script>
-
-
-<p>Webpage template borrows from <a href="https://qzhang95.github.io/">Qiang Zhang</a>.</p>
-
-
 
 </body>
 </html>
