--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <meta name="description" content="Song Deng, 邓松.">
 <meta name="keywords" content="Song Deng, 邓松, Big Data, Data Mining, Deep Learning, ">
-<link rel="stylesheet" href="./css/jemdoc.css" type="text/css" />
+<link rel="stylesheet" href="./jemdoc.css" type="text/css" />
 <script src="jquery.min.js"></script>
 <link rel="shortcut icon" href="./Files/favicon.ico">
 <title>Song Deng's Homepage 邓松主页</title> 
