--- a/index.html
+++ b/index.html
@@ -69,12 +69,18 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 	    <li><p> 2021~  : Mr. Mengfei Sun(孙梦飞) </p></li>
 	    <li><p> 2021~  : Mr. Hongwei Sun(孙宏伟) </p></li>
 	    <li><p> 2021~  : Mr. Junjie Wang(王俊杰) </p></li>
-        <li><p> 2021~  : Mr. Zhongxu Zhang(张中旭) </p></li>
+            <li><p> 2021~  : Mr. Zhongxu Zhang(张中旭) </p></li>
 	    <li><p> 2020~  : Mr. Qicong Hu(胡琦聪) </p></li>			
 	    <li><p> 2020~  : Mr. Yujia Zhai(翟羽佳) </p></li>
 	    <li><p> 2020~  : Ms. Linlin Yuan(袁玲玲)</p></li>
 	    <li><p> 2020~  : Mr. Qinliang Li (李前亮) </p></li>
- 	   
+	    <li><p> 2019~  : Ms. Xia Dong (董霞) </p></li>
+	    <li><p> 2019~  : Ms. Qinyuan Cai (蔡清媛) </p></li>
+	    <li><p> 2019~  : Mr. Zhanwang Zhu (祝展望) </p></li>
+	    <li><p> 2019~  : Mr. Jiantang Zhang (张建堂) </p></li>
+            <li><p> 2018~  : Mr. Fulin Chen (陈福林) </p></li>
+	    <li><p> 2018~  : Ms. Xinya Yuan (袁新雅) </p></li>
+ 	     
   </ul>
 
 
