--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ Email: ds16090311@163.com;dsylc2006@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;<br />
 
  
 <A NAME="Interest"><h2>Biography</h2></A>
-I received the Ph.D. degree in Computer Science from School of Computer Science and Technology, Nanjing University of Posts and Telecommunications, Nanjing, China in 2012. I was a visiting scholar from August 2018 to February 2019 at the University of Louisiana, Lafayette, USA. I am currently a professor at the Institute of Carbon Neutral Advanced Technology, Nanjing University of Posts and Telecommunications. I published over 40 papers, including  journals and conferences like IEEE T-SC, IEEE T-II, T-ITS, ACM T-OIT, Applied Soft Computing, etc. Google Scholar cited by more than 1000, H-Index 18. I am a member of IEEE. ，<h3>My research interests include:</h3>
+I received the Ph.D. degree in Computer Science from School of Computer Science and Technology, Nanjing University of Posts and Telecommunications, Nanjing, China in 2009. I was a visiting scholar from August 2018 to February 2019 at the University of Louisiana, Lafayette, USA. I am currently a professor at the Institute of Carbon Neutral Advanced Technology, Nanjing University of Posts and Telecommunications. I published over 40 papers, including  journals and conferences like IEEE T-SC, IEEE T-II, T-ITS, ACM T-OIT, Applied Soft Computing, etc. Google Scholar cited by more than 1000, H-Index 18. I am a member of IEEE. ，<h3>My research interests include:</h3>
 <ul>
 <font size="3.5"> 
-|Smart Grid Information Security&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|Information security for information-physical fusion systems &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|Data Mining and Big Data Analytics         
+|Data Security&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|privacy preservation &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|cyber-physical system &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|data mining&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;big data     
 
 
 </ul>
@@ -59,12 +59,12 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 
 <A NAME="Group Members"><h2>Group Members</h2></A>
 <ul>
-        <li><p> 2022~  : Mr. Longxiang Zhang (张垄祥) </p></li>			
-	    <li><p> 2022~  : Mr. Lin Chen (陈林) </p></li>
-	    <li><p> 2022~  : Ms. Li Tao (陶莉) </p></li>
-	    <li><p> 2022~  : Mr. Yimin Yuan (袁一鸣) </p></li>
-        <li><p> 2022~  : Mr. Qinsong Zhang (张清松) </p></li>
-        <li><p> 2022~  : Mr. Haifeng Chen(陈海峰) </p></li>
+            <li><p> 2022~  : Mr. Longxiang Zhang (张垄祥) </p></li>		        <li><p> 2017~  : Ms. Xinxin Wu (吴新新) </p></li>
+	    <li><p> 2022~  : Mr. Lin Chen (陈林) </p></li>                              <li><p> 2017~  : Mr. Boyu Zhu (朱博宇) </p></li>
+	    <li><p> 2022~  : Ms. Li Tao (陶莉) </p></li>                                <li><p> 2017~  : Mr.Yunan Xu (俆雨楠) </p></li>                                                                               
+	    <li><p> 2022~  : Mr. Yimin Yuan (袁一鸣) </p></li>                          <li><p> 2016~  : Ms.Lipin Zhang (张利平) </p></li>
+            <li><p> 2022~  : Mr. Qinsong Zhang (张清松) </p></li>
+            <li><p> 2022~  : Mr. Haifeng Chen(陈海峰) </p></li>
 	    <li><p> 2021~  : Mr. Jie Zhang(张杰) </p></li>			
 	    <li><p> 2021~  : Mr. Mengfei Sun(孙梦飞) </p></li>
 	    <li><p> 2021~  : Mr. Hongwei Sun(孙宏伟) </p></li>
