--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Email: ds16090311@163.com;dsylc2006@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;<br />
 I received the Ph.D. degree in Computer Science from School of Computer Science and Technology, Nanjing University of Posts and Telecommunications, Nanjing, China in 2009. I was a visiting scholar from August 2018 to February 2019 at the University of Louisiana, Lafayette, USA. I am currently a professor at the Institute of Carbon Neutral Advanced Technology, Nanjing University of Posts and Telecommunications. I published over 40 papers, including  journals and conferences like IEEE T-SC, IEEE T-II, T-ITS, ACM T-OIT, Applied Soft Computing, etc. Google Scholar cited by more than 1000, H-Index 18. I am a member of IEEE. ，<h3>My research interests include:</h3>
 <ul>
 <font size="3.5"> 
-|Data Security&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|privacy preservation &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|cyber-physical system &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|data mining&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|big data     
+|Data Security&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|privacy preservation &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|cyber-physical system &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|data mining&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|big data     
 
 
 </ul>
@@ -59,10 +59,10 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 
 <A NAME="Group Members"><h2>Group Members</h2></A>
 <ul>
-            <li><p> 2022~  : Mr. Longxiang Zhang (张垄祥) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2017~  : Ms. Xinxin Wu (吴新新) </p></li>
-	    <li><p> 2022~  : Mr. Lin Chen (陈林) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          2017~  : Mr. Boyu Zhu (朱博宇) </p></li>
-	    <li><p> 2022~  : Ms. Li Tao (陶莉)  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2017~  : Mr.Yunan Xu (俆雨楠) </p></li>                                                                               
-	    <li><p> 2022~  : Mr. Yimin Yuan (袁一鸣)  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2016~  : Ms.Lipin Zhang (张利平) </p></li>
+            <li><p> 2022~  : Mr. Longxiang Zhang (张垄祥)</p></li>  
+	    <li><p> 2022~  : Mr. Lin Chen (陈林)</p></li>          
+	    <li><p> 2022~  : Ms. Li Tao (陶莉)</p></li>                                                                                 
+	    <li><p> 2022~  : Mr. Yimin Yuan (袁一鸣)</p></li>   
             <li><p> 2022~  : Mr. Qinsong Zhang (张清松) </p></li>
             <li><p> 2022~  : Mr. Haifeng Chen(陈海峰) </p></li>
 	    <li><p> 2021~  : Mr. Jie Zhang(张杰) </p></li>			
@@ -80,7 +80,10 @@ I received the Ph.D. degree in Computer Science from School of Computer Science 
 	    <li><p> 2019~  : Mr. Jiantang Zhang (张建堂) </p></li>
             <li><p> 2018~  : Mr. Fulin Chen (陈福林) </p></li>
 	    <li><p> 2018~  : Ms. Xinya Yuan (袁新雅) </p></li>
- 	     
+ 	    <li><p> 2017~  : Ms. Xinxin Wu (吴新新) </p></li>
+	    <li><p> 2017~  : Mr. Boyu Zhu (朱博宇) </p></li>
+            <li><p> 2017~  : Mr.Yunan Xu (俆雨楠) </p></li>	    
+            <li><p> 2016~  : Ms.Lipin Zhang (张利平) </p></li>    
   </ul>
 
 
