--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <td align="left"><p><a href="./"><font size="4">Song Deng (</font><font size="4"; font style="font-family:Microsoft YaHei">邓 松</font><font size="4">)</font></a><br />
 <i> Ph.D, Professor</i>
 <br />
-<a href="http://xjjs.njupt.edu.cn/main.htm" target="_blank">Advanced Technology Research Institute of Nanjing University of Posts and Telecommunications</a><br /><br />
+<a href="http://xjjs.njupt.edu.cn/main.htm" target="_blank">Institute of Advanced Technology, Nanjing University Post & Telecommunication</a><br /><br />
 Location: No.9 Wenyuan Road, Qixia District, Nanjing City, Jiangsu Province <br />
 <class="staffshortcut">
  <A HREF="#Interest">Biography</A> | 
